<resources>
    <string name="other_event_cause">Otra causa</string>
    <string name="current_patients_extra_name">currentPatientsExtraName</string>
    <string name="tab_pacientes_text">Pacientes</string>
    <string name="tab_informacion_evento_text">Información</string>
    <string name="tab_ubicacion_manual_text">Ubicación manual</string>
    <string name="tab_crear_paciente_text">Crear</string>
    <string name="app_name">Asistencia Prehospitalaria</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuración</string>
    <string name="title_create_event_text_view">Información general</string>
    <string name="sppiner_causa_atencion_evento_text_view">Causa que origna la atención *</string>
    <string name="sppiner_state_event_text_view">Departamento *</string>
    <string name="sppiner_city_event_text_view">Municipio *</string>
    <string name="edit_text_address_event_text_view">Dirección *</string>
    <string name="radio_zone_event_text_view">Zona *</string>
    <string name="radio_zone_rural_radio_button">Rural</string>
    <string name="radio_zone_urban_radio_button">Urbana</string>
    <string name="edit_text_case_number_event_text_view">*Número de caso:</string>
    <string name="edit_date_event_text_view">Fecha de llamada *</string>
    <string name="edit_time_event_text_view">Hora de llamada *</string>
    <string name="create_button_text">Guardar</string>
    <string name="text_view_state_text">"Departamento"</string>
    <string name="text_view_city_text">"Municipio"</string>
    <string name="text_view_direccion_text">"DIRECCIÓN"</string>
    <string name="text_view_other_text">OTRA</string>
    <string name="create_button_back_text">Cancelar</string>
    <string name="create_event_address_error_text">Debe ingresar la dirección en la que se presenta el evento</string>
    <string name="create_event_state_error_text">Debe seleccionar el departamento en el que se presento el evento</string>
    <string name="create_event_city_error_text">Debe seleccionar el municipio en el que se presento el evento</string>
    <string name="create_event_zone_error_text">Debe seleccionar la zona en que se presenta el evento</string>
    <string name="create_event_cause_error_text">Debe seleccionar la causa del evento</string>
    <string name="create_event_case_number_error_text">Debe ingresar el número del caso</string>
    <string name="create_event_date_error_text">Debe ingresar la fecha y hora de la llamada</string>
    <string name="create_event_case_number_not_integer_error_text">El número de caso debe ser un número entero</string>
    <string name="create_event_date_greater_error_text">La fecha y hora de la llamada debe ser menor a la fecha actual</string>
    <string name="create_event_success_text">El evento ha sido creado exitosamente</string>
    <string name="loading_dialog_text">Espere un momento por favor...</string>
    <string name="title_activity_list_events">Eventos de emergencias</string>
    <string name="event_state_label_text">Estado:\u0020</string>
    <string name="event_number_label_text">Número de caso:\u0020</string>
    <string name="event_address_label_text">Dirección:\u0020</string>
    <string name="event_city_label_text">Ciudad:\u0020</string>
    <string name="event_cause_label_text">Causa:\u0020</string>
    <string name="event_date_label_text">Fecha:\u0020</string>
    <string name="date_time_format">MM/dd/yyyy HH:mm:ss</string>
    <string name="search_event_text_field">Ingrese un criterio de búsqueda de eventos</string>
    <string name="title_activity_login">Acceso de Usuario</string>
    <string name="username_field_login_name">Login:\u0020</string>
    <string name="password_field_login_name">Clave:\u0020</string>
    <string name="username_field_login_hint">Ingrese su nombre de usuario</string>
    <string name="password_field_login_hint">Ingrese su clave</string>
    <string name="login_button_text">Acceder</string>
    <string name="button_create_event_text">Crear evento</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="lblPacientes">Paciente(s)</string>
    <string name="rbAccidenteTransito">Accidente de tránsito</string>
    <string name="rbAccidenteHogar">Accidente en el hogar</string>
    <string name="rbAccidenteViaPublica">Accidente en vía pública</string>
    <string name="rbAccidenteLaboral">Accidente laboral</string>
    <string name="rbAgresion">\nAgresión</string>
    <string name="rbEmergenciaMedica">Emergencia Médica</string>
    <string name="rbLesionAutoinfringida">Lesión autoinfrigida</string>
    <string name="rbViolacion">\nViolación</string>
    <string name="lblZona">*Zona</string>
    <string name="lblFechaHora">*Fecha/hora</string>
    <string name="rbUrbana">Urbana</string>
    <string name="rbRural">Rural</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="lbl_causa_atencion">*Atención causada por:</string>
    <string name="lbl_placa_ambulancia">*Placa de ambulancia \nque atiende:</string>
    <string name="lbl_entidad_responsable">*Entidad responsable:</string>
    <string name="lbl_entidades_apoyo">Entidades de apoyo:</string>
    <string name="cAccidenteTransito">14606</string>
    <string name="cAccidenteHogar">14607</string>
    <string name="cAccidenteViaPublica">14608</string>
    <string name="cAccidenteLaboral">14609</string>
    <string name="cAgresion">14610</string>
    <string name="cOtraCausa">14742</string>
    <string name="cEmergenciaMedica">14611</string>
    <string name="cLesionAutoinfringida">14612</string>
    <string name="cViolacion">14613</string>
    <string name="lbl_marcador_mapa">Ubique el marcador en el lugar exacto del evento</string>
    <string name="lbl_departamento">Departamento</string>
    <string name="lbl_municipio">Municipio</string>
    <string name="lbl_direccion">Dirección</string>
    <string name="lbl_numero_dir">No.</string>
    <string name="lbl_guion_dir">-</string>
    <string name="lbl_otra_dir">Otra</string>
    <string name="lesionado_consecutivo_text">#</string>
    <string name="lesionado_gender_text">Genero</string>
    <string name="lesionado_lesion_text">Lesion</string>
    <string name="lesionado_ubicacion_text">Ubicacion</string>
    <string name="lesionado_name_text">Nombre</string>
    <string name="lesionado_identificacion">Identificacion</string>
    <string-array name="list_tipo_via">
        <item/>
        <item>Autopista</item>
        <item>Avenida</item>
        <item>Avenida Calle</item>
        <item>Avenida Carrera</item>
        <item>Bulevar</item>
        <item>Calle</item>
        <item>Carrera</item>
        <item>Carretera</item>
        <item>Circular</item>
        <item>Circunvalar</item>
        <item>Cuentas Corridas</item>
        <item>Diagonal</item>
        <item>Pasaje</item>
        <item>Paseo</item>
        <item>Peatonal</item>
        <item>Transversal</item>
        <item>Troncal</item>
        <item>Variante</item>
        <item>Vía</item>
    </string-array>
    <string-array name="list_cuadrante">
        <item/>
        <item>Norte</item>
        <item>Sur</item>
        <item>Este</item>
        <item>Oeste</item>
    </string-array>
    <string name="title_activity_list_patients">ListPatientsActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_evaluacion_patient">EvaluacionPatientActivity</string>
    <string name="title_activity_create_patient">CreatePatientActivity</string>
    <string name="title_activity_evaluacion_fragment">EvaluacionFragmentActivity</string>
    <string name="parocardiaco_text">\nParo cardíaco</string>
    <string name="genitourinario_text">\nGenitourinario</string>
    <string name="ovace_text">\nOVACE</string>
    <string name="neurologica_text">\nNeurológica</string>
    <string name="gicobstetricotext">Gineco Obstétrico</string>
    <string name="termicaText">Térmica</string>
    <string name="organos_sentidos_text">Órganos Sentidos</string>
    <string name="enfermedad_comun_text">Enfermedad Común</string>
    <string name="shock_text">Shock</string>
    <string name="cardiovascular_text">\nCardiovascular</string>
    <string name="gastrointestinal_text">\nGastrointestinal</string>
    <string name="intoxicacion_text">\nIntoxicación</string>
    <string name="psiquiatrica_text">Psiquiátrica</string>
    <string name="osteomuscular_text">\nOsteomuscular</string>
    <string name="abdomen_text">\nAbdomen</string>
    <string name="politrauma_text">\nPolitrauma</string>
    <string name="pelvico_text">\nPélvico</string>
    <string name="maxilofacial_text">\nMaxilofacial</string>
    <string name="extremidad_superior_text">Extremidad Superior</string>
    <string name="raquideomedular_text">\nRaquimedular</string>
    <string name="torax_text">\nTórax</string>
    <string name="tejidos_blandos_text">Téjidos blandos</string>
    <string name="tec_text">\nTEC</string>
    <string name="extremidad_inferior_text">Extremidad inferior</string>
    <string name="abrasion_text">Abrasión</string>
    <string name="amputacion_text">Amputación</string>
    <string name="aplastamiento_text">Aplastamiento</string>
    <string name="avulsion_text">Avulsión</string>
    <string name="contusion_text">Contusión</string>
    <string name="dolor_text">Dolor</string>
    <string name="esguince_text">\nEsguince</string>
    <string name="fractura_abierta_text">Fractura Abierta</string>
    <string name="quemadura_text">\nQuemadura</string>
    <string name="herida_text">\nHerida</string>
    <string name="fractura_cerrada_text">Fractura Cerrada</string>
    <string name="herida_arma_fuego_text">Herida Arma de Fuego</string>
    <string name="herida_arma_blanca_text">Herida Arma Blanca</string>
    <string name="hemorragia_text">\nHemorragia</string>
    <string name="laceracion_text">\nLaceración</string>
    <string name="mordida_text">Mordida</string>
    <string name="picadura_text">Picadura</string>
    <string name="puncion_text">Punción</string>
    <string name="trauma_cerrado_text">Trauma Cerrado</string>
    <string name="trauma_penetrante_text">Trauma Penetrante</string>
    <string name="hematoma_text">\nHematoma</string>
    <string name="fecha_evento_description">Fecha del evento</string>
    <string name="pupilas_title_text">PUPILAS</string>
    <string name="pupilas_mioticas_text">Mióticas</string>
    <string name="pupilas_midriaticas_text">Midriaticas</string>
    <string name="pupilas_anisocoricas_text">Anisocóricas</string>
    <string name="pupilas_reactivas_text">Si</string>
    <string name="pupilas_isocoricas_text">Isocóricas</string>
    <string name="pupilas_no_reactivas_text">No</string>
    <string name="pupilas_no_evaluables_text">\nNo evaluables</string>
    <string name="pupilas_protesis_izquierda_text">Prótesis izquierda</string>
    <string name="pupilas_protesis_derecha_text">Prótesis derecha</string>
    <string name="insumo_title_text">INSUMO</string>
    <string name="via_administracion_title_text">VÍA DE ADMINISTRACIÓN</string>
    <string name="volumen_title_text">VOLUMEN</string>
    <string name="unidades_title_text">Unidades</string>
    <string name="tiempo_posologia_title_text">TIEMPO</string>
    <string name="horas_posologia_title_text">Horas</string>
    <string name="minutos_posologia_title_text">Minutos</string>
    <string name="segundos_posologia_title_text">Segundos</string>
    <string name="cantidad_title_text">Cantidad</string>
    <string name="button_add_insumo_text">Agregar insumo</string>
    <string name="suministro_instantaneo_text">Inmediato (A chorro)</string>
    <string name="fecha_posologia_title_text">FECHA</string>
</resources>