<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/tableLayoutTrauma">

        <TableRow>
            <CheckBox
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="@dimen/radio_button_height"
            android:text="@string/politrauma_text"
            android:id="@+id/radioButtonPolitrauma"
                android:background="@drawable/borders"
            android:checked="false"/>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:background="@drawable/borders"
                android:text="@string/abdomen_text"
                android:id="@+id/radioButtonAbdomen"
                android:checked="false"/>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/osteomuscular_text"
                android:id="@+id/radioButtonOsteoMuscular"
                android:background="@drawable/borders"
                android:checked="false"/>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/organos_sentidos_text"
                android:id="@+id/radioButtonOrganosSentidos"
                android:background="@drawable/borders"
                android:checked="false"/>
        </TableRow>
        <TableRow>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/pelvico_text"
                android:id="@+id/radioButtonPelvico"
                android:background="@drawable/borders"
                android:checked="false"/>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/maxilofacial_text"
                android:id="@+id/radioButtonMaxiloFacial"
                android:background="@drawable/borders"
                android:checked="false"/>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/extremidad_superior_text"
                android:id="@+id/radioButtonExtremidadSuperior"
                android:background="@drawable/borders"
                android:checked="false"/>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/raquideomedular_text"
                android:id="@+id/radioButtonRaquideomedular"
                android:background="@drawable/borders"
                android:checked="false"/>
        </TableRow>
        <TableRow>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/torax_text"
                android:id="@+id/radioButtonTorax"
                android:background="@drawable/borders"
                android:checked="false"/>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/tejidos_blandos_text"
                android:id="@+id/radioButtonTejidosBlandos"
                android:background="@drawable/borders"
                android:checked="false"/>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/tec_text"
                android:id="@+id/radioButtonTec"
                android:background="@drawable/borders"
                android:checked="false"/>
            <CheckBox
                android:layout_width="@dimen/radio_button_width"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/extremidad_inferior_text"
                android:id="@+id/radioButtonExtremidadInferior"
                android:background="@drawable/borders"
                android:checked="false"/>
        </TableRow>
        </TableLayout>
</RelativeLayout>